--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.5.0",
   "private": true,
   "scripts": {
-    "start": "netlify dev",
+    "start": "netlify dev --openssl-legacy-provider",
     "dev": "next dev",
     "build": "next build",
     "export": "next export"
   },
   "dependencies": {
-    "next": "^11.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next": "^13.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.8.0"
+    "@netlify/plugin-nextjs": "^4.31.0"
   }
 }
