--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.5.0",
   "private": true,
   "scripts": {
-    "start": "netlify dev --openssl-legacy-provider",
+    "start": "netlify dev",
     "dev": "next dev",
     "build": "next build",
     "export": "next export"
