--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "export": "next export"
   },
   "dependencies": {
+    "install": "^0.13.0",
     "next": "^13.2.4",
+    "nuxt": "^3.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
